feito até a questão 2

--- a/Lista_1/lista_1.tex
+++ b/Lista_1/lista_1.tex
@@ -150,7 +150,7 @@ aleatória que denota a face do dado. Responda às perguntas abaixo:
         $$P [X > E[X]] = \sum_{i=11}^{20} \frac{1}{20} = \frac{10}{20} = \frac{1}{2} = \underline{0,5 \quad \vline}$$
         $$E[X^2] = \sum_{i=1}^{20} i^2 \cdot \frac{1}{20} = \frac{20 \cdot 21 \cdot 41}{20 \cdot 6} = \frac{287}{2}$$
         $$\text{Var}[X] = E[X^2] - E[X]^2 = \frac{287}{2} - \left(\frac{21}{2}\right)^2 = \frac{287}{2} - \frac{441}{4} = \frac{133}{4} \approx \underline{33,25 \quad \vline}$$
-        O dado uniforme possui uma variância maior, ou seja, é esperado que haja uma distância numérica maior entre seus valores tirados em comparação com o outro dado.
+        O dado com $P[X = i] = ci$ possui probabilidades maiores para valores maiores de $i$, concentrando mais a distribuição em torno de valores maiores. Isso faz com que o valor esperado seja maior e que a variância seja menor em comparação ao dado com distribuição uniforme. Portanto, \underbar{o dado com distribuição uniforme} $P[X = i] = \frac{1}{20}$ \underbar{possui maior variância}.
     \end{tcolorbox}
 \end{enumerate}
 
@@ -273,9 +273,9 @@ Considere o número de vezes que a moeda precisa ser jogada para obtermos $k$ ca
     \end{tcolorbox}
 \end{enumerate}
 
-% \section*{Códigos}
+\section*{Códigos}
 
-% Os códigos utilizados para a resolução dos exercícios estão disponíveis no repositório do GitHub: \url{https://github.com/lhscaldas/cps863/}
+Os códigos utilizados para a resolução dos exercícios estão disponíveis no repositório do GitHub: \url{https://github.com/lhscaldas/CPS767_MCMC/}
 
 % \bibliographystyle{abntex2-num} % Escolha o estilo de citação desejado
 % \nocite{sutton2018reinforcement}
