correção de formatação na questão 2

--- a/Lista_1/lista_1.tex
+++ b/Lista_1/lista_1.tex
@@ -144,6 +144,7 @@ aleatória que denota a face do dado. Responda às perguntas abaixo:
         Portanto, a variância de $X$ é dada por:
         $$\text{Var}[X] = 210 - \left(\frac{41}{3}\right)^2 \approx 210 - 186,77 = \underline{23,23 \quad \vline}$$
     \end{tcolorbox}
+    \newpage
     \item Repita os últimos três itens para o caso do dado ser uniforme, ou seja, $P [X = i] = \frac{1}{20}$, $i = 1, \dots, 20$. Qual dado possui maior variância? Explique intuitivamente sua descoberta.
     \begin{tcolorbox}[colframe=black, title=Resposta:]
         $$E[X] = \sum_{i=1}^{20} i \cdot \frac{1}{20} = \frac{21}{2} = \underline{10,5 \quad \vline}$$
